BGE: rtsp support for VideoTexture (video streaming)

In collaboration with Benoit Bolsee (mainly doing it under his
directions).

Note: FFmpeg lib needs to be compiled with rtsp support for this to
work.

Bug 1/2 of T41004